Fix z-index of other vacancies in mobile swiper

--- a/src/components/Company/Company.css
+++ b/src/components/Company/Company.css
@@ -95,6 +95,7 @@
 	flex-direction: column-reverse;
 	align-items: flex-start;
 	justify-content: space-between;
+	z-index: 1;
 }
 
 .company-card-content a {
