--- a/src/components/JobDetails/JobDetails.css
+++ b/src/components/JobDetails/JobDetails.css
@@ -151,7 +151,6 @@
 }
 
 .job-details-more-list-mobile {
-	z-index: -1;
 	display: none;
 }
 
