--- a/src/components/MobileSwiper/MobileSwiper.css
+++ b/src/components/MobileSwiper/MobileSwiper.css
@@ -1,3 +1,7 @@
+.mobile-swiper {
+	z-index: 0;
+}
+
 .mobile-swiper .swiper-pagination {
 	position: static;
 	margin-top: 10px;
